--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 thiserror = "1.0.14"
 void = "1.0.2"
+ipfs-unixfs = { path = "unixfs" }
 
 [build-dependencies]
 prost-build = "0.6.1"
@@ -39,7 +40,7 @@ prost-build = "0.6.1"
 env_logger = "0.7.1"
 
 [workspace]
-members = [ "bitswap", "http", "examples" ]
+members = [ "bitswap", "http", "examples", "unixfs" ]
 
 [patch.crates-io]
 ctr = { git = "https://github.com/koivunej/stream-ciphers.git", branch = "ctr128-64to128" }
