--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,15 @@ serde_json = "1.0.51"
 thiserror = "1.0.14"
 void = "1.0.2"
 ipfs-unixfs = { path = "unixfs" }
+async-stream = "0.2.1"
 
 [build-dependencies]
 prost-build = "0.6.1"
 
 [dev-dependencies]
 env_logger = "0.7.1"
+sha2 = "*" # this is dependent on by multihash but it doesn't expose the Digest functionality needed in test
+hex-literal = "*"
 
 [workspace]
 members = [ "bitswap", "http", "examples", "unixfs" ]
