--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ default = []
 nightly = []
 all = ["rocksdb"]
 
+[profile.release]
+lto = "fat"
+codegen-units = 1
+debug = 2
+
 [dependencies]
 anyhow = "1.0.28"
 async-std = { version = "1.5.0", features = ["attributes", "std"] }
